LLVMInterface/LLVMInterface/ManagedContext.h

struct ManagedContext
{
    llvm::Module* M;
    llvm::LLVMContext* context;
    llvm::Type* stringTy = 0;
    llvm::IRBuilder<>* builder = 0;
    AllocationRemovingPass* arp = 0;

    ManagedContext(const char* name, const char* filename );
    ~ManagedContext();

};
EXTERN_API(ManagedContext)* CreateManagedContext(const char* name, const char* filename);
EXTERN_API(void) DisposeManagedContext(ManagedContext* ctx);
EXTERN_API(void) Save(ManagedContext* ctx, const char* filename);
EXTERN_API(void) DumpModule(ManagedContext* ctx, const char* filename);
EXTERN_API(void) PrintValueDump(ManagedContext* ctx, llvm::Value* val);
EXTERN_API(void) PrintTypeDump(ManagedContext* ctx, llvm::Type* ty);
EXTERN_API(void) PrintFunctionDump(ManagedContext* ctx, llvm::Function* fn);
EXTERN_API(void) PrintBasicBlockDump(ManagedContext* ctx, llvm::BasicBlock* bb);
EXTERN_API(bool) VerifyModule(ManagedContext* ctx);
EXTERN_API(llvm::Type)* getStruct(ManagedContext* ctx, const char* name);
EXTERN_API(void) completeStruct(ManagedContext* ctx, llvm::Type* str, llvm::Type* const* body, uint32_t bodyLen);
EXTERN_API(llvm::Type)* getUnnamedStruct(ManagedContext* ctx, llvm::Type* const* body, uint32_t bodyLen);
EXTERN_API(llvm::Type)* getBoolType(ManagedContext* ctx);
EXTERN_API(llvm::Type)* getByteType(ManagedContext* ctx);
EXTERN_API(llvm::Type)* getShortType(ManagedContext* ctx);
EXTERN_API(llvm::Type)* getIntType(ManagedContext* ctx);
EXTERN_API(llvm::Type)* getLongType(ManagedContext* ctx);
EXTERN_API(llvm::Type)* getBiglongType(ManagedContext* ctx);
EXTERN_API(llvm::Type)* getFloatType(ManagedContext* ctx);
EXTERN_API(llvm::Type)* getDoubleType(ManagedContext* ctx);
EXTERN_API(llvm::Type)* getStringType(ManagedContext* ctx);
EXTERN_API(llvm::Type)* getArrayType(ManagedContext* ctx, llvm::Type* elem, uint32_t count);
EXTERN_API(llvm::Type)* getPointerType(ManagedContext* ctx, llvm::Type* pointsTo);
EXTERN_API(llvm::Type)* getVoidPtr(ManagedContext* ctx);
EXTERN_API(llvm::Type)* getVoidType(ManagedContext* ctx);
EXTERN_API(llvm::Type)* getOpaqueType(ManagedContext* ctx, const char* name);
EXTERN_API(llvm::Type)* getSizeTType(ManagedContext* ctx);
EXTERN_API(llvm::Type)* getTypeFromValue(ManagedContext* ctx, llvm::Value* val);
EXTERN_API(llvm::Function)* declareFunction(ManagedContext* ctx, const char* name, llvm::Type* retTy, llvm::Type* const* argTys, uint32_t argc, const char** argNames, uint32_t argNamec, bool isPublic);
EXTERN_API(llvm::Function)* declareFunctionOfType(ManagedContext* ctx, const char* name, llvm::Type* fnPtrTy, bool isPublic);
EXTERN_API(void) addFunctionAttributes(ManagedContext* ctx, llvm::Function* fn, const char** atts, uint32_t attc);
EXTERN_API(void) addParamAttributes(ManagedContext* ctx, llvm::Function* fn, const char** atts, uint32_t attc, uint32_t paramIdx);
EXTERN_API(void) addReturnNoAliasAttribute(ManagedContext* ctx, llvm::Function* fn);
EXTERN_API(void) addReturnNotNullAttribute(ManagedContext* ctx, llvm::Function* fn);
EXTERN_API(void) addReturnDereferenceableAttribute(ManagedContext *ctx, llvm::Function *fn, uint64_t numBytesOrDeduce);