LLVMCodeGenerator/LLVMCodeGenerator/ManagedContext.cs


        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr CreateManagedContext ([MarshalAs(UnmanagedType.LPUTF8Str)]string name, [MarshalAs(UnmanagedType.LPUTF8Str)]string filename);
        public  ManagedContext (string name, string filename) {
            Instance = CreateManagedContext(name, filename);
        }
        ~ManagedContext() {
            Dispose();
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void DisposeManagedContext (IntPtr ctx);
        public void Dispose () {
            if (isDisposed)return; isDisposed = true;
            DisposeManagedContext(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void Save (IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)]string filename);
        public void Save (string filename) {
            Save(Instance, filename);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void DumpModule (IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)]string filename);
        public void DumpModule (string filename) {
            DumpModule(Instance, filename);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void PrintValueDump (IntPtr ctx, IntPtr val);
        public void PrintValueDump (IntPtr val) {
            PrintValueDump(Instance, val);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void PrintTypeDump (IntPtr ctx, IntPtr ty);
        public void PrintTypeDump (IntPtr ty) {
            PrintTypeDump(Instance, ty);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void PrintFunctionDump (IntPtr ctx, IntPtr fn);
        public void PrintFunctionDump (IntPtr fn) {
            PrintFunctionDump(Instance, fn);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void PrintBasicBlockDump (IntPtr ctx, IntPtr bb);
        public void PrintBasicBlockDump (IntPtr bb) {
            PrintBasicBlockDump(Instance, bb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern bool VerifyModule (IntPtr ctx);
        public bool VerifyModule () {
            return VerifyModule(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getStruct (IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)]string name);
        public static IntPtr GetStruct (IntPtr ctx, string name) {
            return getStruct(ctx, name);
        }
        public IntPtr GetStruct (string name) {
            return getStruct(Instance, name);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void completeStruct (IntPtr ctx, IntPtr str, IntPtr[] body, uint bodyLen);
        public static void CompleteStruct (IntPtr ctx, IntPtr str, IntPtr[] body) {
            completeStruct(ctx, str, body, (uint)body.Length);
        }
        public void CompleteStruct (IntPtr str, IntPtr[] body) {
            completeStruct(Instance, str, body, (uint)body.Length);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getUnnamedStruct (IntPtr ctx, IntPtr[] body, uint bodyLen);
        public static IntPtr GetUnnamedStruct (IntPtr ctx, IntPtr[] body) {
            return getUnnamedStruct(ctx, body, (uint)body.Length);
        }
        public IntPtr GetUnnamedStruct (IntPtr[] body) {
            return getUnnamedStruct(Instance, body, (uint)body.Length);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getBoolType (IntPtr ctx);
        public static IntPtr GetBoolType (IntPtr ctx) {
            return getBoolType(ctx);
        }
        public IntPtr GetBoolType () {
            return getBoolType(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getByteType (IntPtr ctx);
        public static IntPtr GetByteType (IntPtr ctx) {
            return getByteType(ctx);
        }
        public IntPtr GetByteType () {
            return getByteType(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getShortType (IntPtr ctx);
        public static IntPtr GetShortType (IntPtr ctx) {
            return getShortType(ctx);
        }
        public IntPtr GetShortType () {
            return getShortType(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getIntType (IntPtr ctx);
        public static IntPtr GetIntType (IntPtr ctx) {
            return getIntType(ctx);
        }
        public IntPtr GetIntType () {
            return getIntType(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getLongType (IntPtr ctx);
        public static IntPtr GetLongType (IntPtr ctx) {
            return getLongType(ctx);
        }
        public IntPtr GetLongType () {
            return getLongType(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getBiglongType (IntPtr ctx);
        public static IntPtr GetBiglongType (IntPtr ctx) {
            return getBiglongType(ctx);
        }
        public IntPtr GetBiglongType () {
            return getBiglongType(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getFloatType (IntPtr ctx);
        public static IntPtr GetFloatType (IntPtr ctx) {
            return getFloatType(ctx);
        }
        public IntPtr GetFloatType () {
            return getFloatType(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getDoubleType (IntPtr ctx);
        public static IntPtr GetDoubleType (IntPtr ctx) {
            return getDoubleType(ctx);
        }
        public IntPtr GetDoubleType () {
            return getDoubleType(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getStringType (IntPtr ctx);
        public static IntPtr GetStringType (IntPtr ctx) {
            return getStringType(ctx);
        }
        public IntPtr GetStringType () {
            return getStringType(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getArrayType (IntPtr ctx, IntPtr elem, uint count);
        public static IntPtr GetArrayType (IntPtr ctx, IntPtr elem, uint count) {
            return getArrayType(ctx, elem, count);
        }
        public IntPtr GetArrayType (IntPtr elem, uint count) {
            return getArrayType(Instance, elem, count);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getPointerType (IntPtr ctx, IntPtr pointsTo);
        public static IntPtr GetPointerType (IntPtr ctx, IntPtr pointsTo) {
            return getPointerType(ctx, pointsTo);
        }
        public IntPtr GetPointerType (IntPtr pointsTo) {
            return getPointerType(Instance, pointsTo);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getVoidPtr (IntPtr ctx);
        public static IntPtr GetVoidPtr (IntPtr ctx) {
            return getVoidPtr(ctx);
        }
        public IntPtr GetVoidPtr () {
            return getVoidPtr(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getVoidType (IntPtr ctx);
        public static IntPtr GetVoidType (IntPtr ctx) {
            return getVoidType(ctx);
        }
        public IntPtr GetVoidType () {
            return getVoidType(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getOpaqueType (IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)]string name);
        public static IntPtr GetOpaqueType (IntPtr ctx, string name) {
            return getOpaqueType(ctx, name);
        }
        public IntPtr GetOpaqueType (string name) {
            return getOpaqueType(Instance, name);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getSizeTType (IntPtr ctx);
        public static IntPtr GetSizeTType (IntPtr ctx) {
            return getSizeTType(ctx);
        }
        public IntPtr GetSizeTType () {
            return getSizeTType(Instance);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getTypeFromValue (IntPtr ctx, IntPtr val);
        public static IntPtr GetTypeFromValue (IntPtr ctx, IntPtr val) {
            return getTypeFromValue(ctx, val);
        }
        public IntPtr GetTypeFromValue (IntPtr val) {
            return getTypeFromValue(Instance, val);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr declareFunction (IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)]string name, IntPtr retTy, IntPtr[] argTys, uint argc, string[] argNames, uint argNamec, bool isPublic);
        public static IntPtr DeclareFunction (IntPtr ctx, string name, IntPtr retTy, IntPtr[] argTys, string[] argNames, bool isPublic) {
            return declareFunction(ctx, name, retTy, argTys, (uint)argTys.Length, argNames, (uint)argNames.Length, isPublic);
        }
        public IntPtr DeclareFunction (string name, IntPtr retTy, IntPtr[] argTys, string[] argNames, bool isPublic) {
            return declareFunction(Instance, name, retTy, argTys, (uint)argTys.Length, argNames, (uint)argNames.Length, isPublic);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr declareFunctionOfType (IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)]string name, IntPtr fnPtrTy, bool isPublic);
        public static IntPtr DeclareFunctionOfType (IntPtr ctx, string name, IntPtr fnPtrTy, bool isPublic) {
            return declareFunctionOfType(ctx, name, fnPtrTy, isPublic);
        }
        public IntPtr DeclareFunctionOfType (string name, IntPtr fnPtrTy, bool isPublic) {
            return declareFunctionOfType(Instance, name, fnPtrTy, isPublic);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void addFunctionAttributes (IntPtr ctx, IntPtr fn, string[] atts, uint attc);
        public static void AddFunctionAttributes (IntPtr ctx, IntPtr fn, string[] atts) {
            addFunctionAttributes(ctx, fn, atts, (uint)atts.Length);
        }
        public void AddFunctionAttributes (IntPtr fn, string[] atts) {
            addFunctionAttributes(Instance, fn, atts, (uint)atts.Length);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void addParamAttributes (IntPtr ctx, IntPtr fn, string[] atts, uint attc, uint paramIdx);
        public static void AddParamAttributes (IntPtr ctx, IntPtr fn, string[] atts, uint paramIdx) {
            addParamAttributes(ctx, fn, atts, (uint)atts.Length, paramIdx);
        }
        public void AddParamAttributes (IntPtr fn, string[] atts, uint paramIdx) {
            addParamAttributes(Instance, fn, atts, (uint)atts.Length, paramIdx);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void addReturnNoAliasAttribute (IntPtr ctx, IntPtr fn);
        public static void AddReturnNoAliasAttribute (IntPtr ctx, IntPtr fn) {
            addReturnNoAliasAttribute(ctx, fn);
        }
        public void AddReturnNoAliasAttribute (IntPtr fn) {
            addReturnNoAliasAttribute(Instance, fn);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void addReturnNotNullAttribute (IntPtr ctx, IntPtr fn);
        public static void AddReturnNotNullAttribute (IntPtr ctx, IntPtr fn) {
            addReturnNotNullAttribute(ctx, fn);
        }
        public void AddReturnNotNullAttribute (IntPtr fn) {
            addReturnNotNullAttribute(Instance, fn);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void addReturnDereferenceableAttribute (IntPtr ctx, IntPtr fn, ulong numBytesOrDeduce);
